# cleanr_bot

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  bot.py  config.py  database.py  docker-compose.yml  keyboards.py  pyproject.toml  scheduler.py
handlers/: admin.py  common.py
services/: assignment.py  notifier.py
tests/: conftest.py  test_assignment.py  test_db.py
